--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 body {
     background: #ffffff;
-    min-width: 960px;
+    min-width: 1024px;
+}
+
+h2 {
+    text-align: center;
 }
 
 .clearfix {
@@ -10,7 +14,6 @@ body {
 .wrapper {
     max-width: 1200px;
     margin: 0 auto;
-
 }
 
 .header-wrap {
@@ -20,7 +23,6 @@ body {
 
 .logo {
     float: left;
-    overflow: hidden;
 }
 
 .logo a {
@@ -31,7 +33,7 @@ body {
 
 .logo a:nth-of-type(2) {
     padding-top: 10px;
-    margin-left:60px;
+    margin-left: 60px;
 }
 
 .logo-orange {
@@ -60,7 +62,7 @@ body {
 .navigation ul {
     list-style: none;
     display: inline-block;
-    
+
 }
 
 .navigation ul li {
@@ -73,44 +75,210 @@ body {
     float: left;
 
 }
-.navigation ul li a{
-    color: #777;
-    
+
+.navigation ul li a {
+    color: #9e9b9b;
+
 }
-.navigation ul li a:hover{
+
+.navigation ul li a:hover {
     color: #fb9c06;
 }
+
 .navigation span {
     font-size: 38px;
     padding-bottom: 20px;
 }
-.slider{
+
+.slider {
     border-top: 4px solid #fcba50;
     border-bottom: 4px solid #fcba50;
-    background-color: #e6f9ff;
-    min-height:400px;
+    /*background-color: #e6f9ff;*/
+    background: url(../img/orange.png) no-repeat;
+    background-size: cover;
+    min-height: 400px;
     position: relative;
 }
 
-.slider h1{
+.slider h1 {
     position: absolute;
-    top:100px;
+    top: 100px;
     text-transform: uppercase;
-    font-family: 'bebas'; 
+    font-family: 'bebas';
     font-weight: 400;
     text-align: center;
     line-height: 80px;
 }
-.slider .h1-orange{
+
+.slider .h1-orange {
     background-color: rgba(110, 109, 107, 0.8);
     color: #fb9c06;
     font-size: 38px;
-    padding:5px 20px;
-   
+    padding: 5px 20px;
+
 }
-.slider .h1-dark{
-    background-color:rgba(251, 156, 6, 0.8);
+
+.slider .h1-dark {
+    background-color: rgba(251, 156, 6, 0.8);
     color: #6e6d6b;
     font-size: 38px;
-    padding:5px 30px;
+    padding: 5px 30px;
+}
+
+.text {
+    padding-bottom: 30px;
+    border-bottom: 3px solid #f2f2f2;
+}
+
+.text-item {
+    width: 22%;
+    float: right;
+    margin-right: 30px;
+
+}
+
+.text-p {
+    margin-top: 25px;
+    font-family: Calibri;
+    font-weight: 800;
+    font-size: 15px;
+    line-height: 22px;
+}
+
+.read-more {
+    margin-top: 20px;
+    float: right;
+    font-family: Calibri;
+    font-size: 15px;
+    color: #fb9c06;
+    font-weight: 800;
+}
+
+.team-wrapper h2 {
+    font-family: 'stmarie';
+    font-size: 50px;
+    font-weight: 600;
+    color: #fb9c06;
+    text-decoration: underline;
+}
+
+.team-content {
+    overflow: hidden;
+}
+
+.team-item {
+    float: left;
+    width: 33.333333333%;
+    
+}
+
+.team-item h3 {
+    font-family: Calibri;
+    font-weight: 600;
+    color:#6e6d6b;
+    font-size: 22px;
+    text-align: center;
+}
+.h3-orange {
+	color:#fb9c06;
+}
+.team-item p{
+    font-family: Calibri;
+    font-weight: 600;
+    line-height: 30px;
+    color:#6e6d6b;
+    font-size: 15px;
+    width:60%;
+    padding-top: 30px;
+    text-align: left;
+    margin:0 auto;
+}
+.avatar {
+    border-radius: 50%;
+    border: 10px solid #ffb540;
+    border-radius: 50%;
+    width: 290px;
+    height: 290px;
+    background: url(../img/horse.png) no-repeat;
+    background-position: center;
+   margin:0 auto;
+}
+
+.rabbit {
+    background: url(../img/rabbit.png) no-repeat;
+    background-position: center;
+}
+
+.emoo {
+    background: url(../img/emoo.png) no-repeat;
+    background-position: center;
+}
+
+.contact {
+	overflow: hidden;
+    padding-bottom: 50px;
+}
+.contact h2{
+    font-family: 'stmarie';
+    font-size: 50px;
+    font-weight: 600;
+    color: #fb9c06;
+    text-decoration: underline;
+}
+.label-options{
+    float:left;
+    padding-top:2px;
+    width:15%;
+}
+.form-item-text {
+    font-family: 'stmarie';
+    font-weight: 600;
+    color:#fb9c06;
+    font-size:28px;
+    
+}
+.form-input {
+    float:left;
+	width:85%;
+    
+}
+.input-options {
+    margin-bottom: 35px;
+	display: block;
+    width: 100%;
+    height: 24px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-image: none;
+    border: 0;
+    background-color: #f8f7f6;
+    border-top: 3px solid #d2d0cf;
+    border-left: 6px solid #d2d0cf;
+}
+.form-input textarea{
+        height:100px;
+        resize: none; 
+}
+.btn{
+    margin-right:35px;
+    float:right;
+    background-color: #fb9c06;
+    width: 200px;
+    height: 50px;
+    font-size: 28px;
+    font-family: 'stmarie';
+    color:#ffffff;
+    border: 3px solid #fcb94f;
+    border-bottom:3px solid #cc830f;
+}
+.footer-text {
+    text-align: center;
+    border-bottom: 3px solid #cc830f;
+    font-family: 'stmarie';
+    background-color: #fb9c06;
+    font-size: 32px;
+    color: #ffffff;
+    padding: 15px;
 }
