--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+
+* {
+box-sizing: border-box;
+}
 body {
     background: #ffffff;
     min-width: 1024px;
@@ -24,14 +28,17 @@ h2 {
 .logo {
     float: left;
 }
+.logo:hover{
+    opacity: 0.8;
+}
 
-.logo a {
+.logo-item {
     float: left;
     margin: 15px 0;
     text-align: center;
 }
 
-.logo a:nth-of-type(2) {
+.logo-item:nth-of-type(2) {
     padding-top: 10px;
     margin-left: 60px;
 }
