--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ h2 {
 
 .navigation {
     float: right;
-    padding-top: 20px;
+    margin-top: 20px;
 
 }
 
@@ -77,7 +77,7 @@ h2 {
     font-family: Calibri;
     margin-left: 70px;
     font-weight: 600;
-    line-height: 40px;
+    line-height: 36px;
     text-align: center;
     font-size: 22px;
     float: left;
